spacing cleanup, ref https://github.com/mozilla/sumo-project/issues/192

--- a/kitsune/sumo/static/sumo/scss/base/forms/_simple-search-form.scss
+++ b/kitsune/sumo/static/sumo/scss/base/forms/_simple-search-form.scss
@@ -56,3 +56,7 @@
     }
   }
 }
+
+.search-results-heading {
+  margin-top: 32px;
+}
