--- a/kitsune/sumo/static/sumo/scss/components/_tabs.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_tabs.scss
@@ -125,7 +125,7 @@
   }
 
   @media #{p.$mq-md} {
-    margin-bottom: 48px;
+    margin-bottom: 40px;
 
     &--link,
     &--button {
