--- a/kitsune/sumo/static/sumo/scss/components/_wiki.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_wiki.scss
@@ -23,7 +23,7 @@ article {
 
   &.topics {
     background-color: #fff;
-    margin-top: 30px;
+    // margin-top: 16px;
 
     > li {
       background-color: #fff;
