--- a/kitsune/sumo/static/sumo/scss/layout/_topic-page.scss
+++ b/kitsune/sumo/static/sumo/scss/layout/_topic-page.scss
@@ -3,7 +3,7 @@
 
 .topic-article {
   display: flex;
-  margin-bottom: p.$spacing-lg;
+  margin-bottom: 32px;
 
   &--icon-wrap {
     flex: 0 0 auto;
@@ -19,6 +19,10 @@
 
   &--text {
     flex: 1 1 100%;
+
+    p {
+      margin-bottom: 0;
+    }
   }
 
   &--meta-list {
@@ -47,7 +51,7 @@
 .sumo-article-header {
   display: flex;
   flex-direction: column-reverse;
-  margin: 48px 0 p.$spacing-md;
+  margin: 0 0 p.$spacing-md;
 
   &.has-border-bottom {
     border-bottom: 1px solid var(--color-text);
@@ -78,7 +82,11 @@
   @media #{p.$mq-md} {
     flex-direction: row;
     align-items: center;
-    margin: 72px 0 p.$spacing-md;
+    margin: p.$spacing-md 0 32px;
+  }
+
+  @media #{p.$mq-lg} {
+    margin: 40px 0;
   }
 }
 
